[tool.poetry]
name = "hanlhn"
version = "0.1.0"
description = ""
authors = ["hanahh080601 <hanlehngoc080601@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
ipykernel = "^6.15.1"
xlrd = "^2.0.1"
pandas-profiling = "^3.2.0"
ipywidgets = "^7.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
